--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "BROSWER='firefox' react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
