--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-piano",
+  "homepage": "https://nat-squared.github.io/natalieTsoNateYeowReactPiano/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
